superlink-netbirdproxy/netbirdproxy-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: netbirdproxy
spec:
  selector:
    app: netbirdproxy
  ports:
    - name: serverappio-grpc
      protocol: TCP
      port: 9091
      targetPort: 9091
    - name: fleet-grpc
      protocol: TCP
      port: 9092
      targetPort: 9092
    - name: control-grpc
      protocol: TCP
      port: 9093
      targetPort: 9093
  type: ClusterIP
