superlink-netbirdproxy/superlink-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: superlink
spec:
  selector:
    app: superlink
  ports:
    - name: serverappio-grpc
      protocol: TCP
      port: 9091
      targetPort: 9091
    - name: fleet-grpc
      protocol: TCP
      port: 9092
      targetPort: 9092
    - name: control-grpc
      protocol: TCP
      port: 9093
      targetPort: 9093
    - name: health
      protocol: TCP
      port: 9100
      targetPort: 9100
  type: ClusterIP
